--- a/package.json
+++ b/package.json
@@ -15,10 +15,18 @@
     "@mui/system": "^5.15.6",
     "@react-three/drei": "^9.97.0",
     "@react-three/fiber": "^8.15.16",
+    "css-loader": "^6.10.0",
+    "file-loader": "^6.2.0",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
+    "next-cloudinary": "^5.20.0",
+    "next-video": "^0.12.1",
+    "next-videos": "^1.4.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-player": "^2.14.1",
+    "style-loader": "^3.3.4",
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
