--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-player": "^2.14.1",
+    "react-router-dom": "^6.22.0",
     "style-loader": "^3.3.4",
     "url-loader": "^4.1.1"
   },
