--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "react-dom": "^18",
     "react-player": "^2.14.1",
     "react-router-dom": "^6.22.0",
+    "react-slick": "^0.30.2",
+    "react-spinners": "^0.13.8",
+    "slick-carousel": "^1.8.1",
     "style-loader": "^3.3.4",
     "url-loader": "^4.1.1"
   },
