--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "next-videos": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "react-player": "^2.14.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.0",
     "react-slick": "^0.30.2",
     "react-spinners": "^0.13.8",
