--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
