--- a/package.json
+++ b/package.json
@@ -13,17 +13,18 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.7",
     "@mui/system": "^5.15.6",
-    "@react-three/drei": "^9.97.0",
+    "@react-three/drei": "^9.99.4",
     "@react-three/fiber": "^8.15.16",
+    "@types/three": "^0.161.2",
     "css-loader": "^6.10.0",
     "file-loader": "^6.2.0",
     "framer-motion": "^11.0.3",
-    "next": "14.1.0",
+    "next": "^14.1.0",
     "next-cloudinary": "^5.20.0",
     "next-video": "^0.12.1",
     "next-videos": "^1.4.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-player": "^2.14.1",
     "react-responsive-carousel": "^3.2.23",
@@ -32,6 +33,7 @@
     "react-spinners": "^0.13.8",
     "slick-carousel": "^1.8.1",
     "style-loader": "^3.3.4",
+    "three": "^0.161.0",
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
