--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@types/three": "^0.161.2",
     "css-loader": "^6.10.0",
     "file-loader": "^6.2.0",
-    "framer-motion": "^11.0.3",
+    "framer-motion": "^11.0.8",
     "next": "^14.1.0",
     "next-cloudinary": "^5.20.0",
     "next-video": "^0.12.1",
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.8.1",
     "react-player": "^2.14.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.0",
