--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "css-loader": "^6.10.0",
     "file-loader": "^6.2.0",
     "framer-motion": "^11.0.8",
-    "next": "^14.1.0",
+    "next": "^14.2.22",
     "next-cloudinary": "^5.20.0",
     "next-video": "^0.8.6",
     "next-videos": "^1.4.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.1",
     "react-player": "^2.14.1",
@@ -42,5 +42,9 @@
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "postcss.config.js",
+  "author": "",
+  "license": "ISC"
 }
